add shell write
add shell write

--- a/views/createRelease.ejs
+++ b/views/createRelease.ejs
@@ -26,6 +26,13 @@
          <label>项目修改描述</label>
          <textarea name="projectContent" style="margin: 0px 0px 10px; width: 420px; height: 139px;"></textarea>
          <span class="help-block"></span>
+         <label>待上传文件01</label>
+         <input type='text' name='file1'>
+         <span class="help-block"></span>
+         <label>文件1发布位置</label>
+         <input type='text' name='position1'>
+         <span class="help-block"></span>
+         
          <!-- <label class="checkbox"><input type="checkbox" />自动发送邮件</label> -->
          <label class="checkbox"><input type="checkbox" checked="true" name="isCreateReleaseFile" />生成发布文件</label>
          <label class="checkbox"><input type="checkbox" checked="true" name="isCopyOriginalFile" />备份原文件</label>
